# rnn_experiment

./: .gitignore  CMakeLists.txt  main.py  requirements.txt
exp0/: CMakeLists.txt  main.cc  run.py
exp0/script/: learning_log.py  spectoram.py  trajectory.py
exp1/: CMakeLists.txt  main.cc  run.py
exp1/script/: ED.py  learning_log.py  lyapunov.py  spectoram.py  trajectory.py
exp_group0/: CMakeLists.txt  exp.cc  exp0.sh  exp1.sh  run.sh
exp_group0/script/: ED.py  learning_log.py  lyapunov.py  main.py  spectoram.py  trajectory.py
exp_group1/: lyap.py  main.py  manager.py  models.py  time_evol.py  utils.py
exp_group1/src/: datasets.py  main.py  models.py  utils.py
log/: rnn_classify.csv
script/: ED.py  learning_log.py  make_gif.py  plot_rnn_classify.py  spectoram.py  trajectory.py
scripts/: get_mnist.py
src/: CMakeLists.txt  _mynn.h  act.h  common.h  dataset.h  exp0.cc  linear.h  lyapunov.cc  lyapunov.h  main.cc  mnist.cc  mynn.cc  mynn.h  mynn_custom.h  mynn_util.h  rnn_classify.cc  rnn_classify.h  ryapunov.cc  ryapunov.h
src/sample/: mlp_mnist.cc  rnn_mnist.cc
test/: CMakeLists.txt  test_linear.cc  test_lyapunov.cc
